Upgrade plugin version