@@ -1,8 +1,6 @@
 package com.zheng.common.util;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
+import java.util.Base64;
 import javax.crypto.*;
 import javax.crypto.spec.SecretKeySpec;
 import java.io.IOException;
@@ -17,7 +15,7 @@ import java.security.SecureRandom;
  */
 public class AESUtil {
 
-    private static final String ENCODE_RULES = "zheng";
+    private static final String ENCODE_RULES = "MoFang@1234";
 
     /**
      * 加密
@@ -55,7 +53,7 @@ public class AESUtil {
             //这里用Base64Encoder中会找不到包
             //解决办法：
             //在项目的Build path中先移除JRE System Library，再添加库JRE System Library，重新编译后就一切正常了。
-            String aesEncode = new String(new BASE64Encoder().encode(byteAES));
+            String aesEncode = new String(Base64.getEncoder().encode(byteAES));
             //11.将字符串返回
             return aesEncode;
         } catch (NoSuchAlgorithmException e) {
@@ -102,7 +100,7 @@ public class AESUtil {
             //7.初始化密码器，第一个参数为加密(Encrypt_mode)或者解密(Decrypt_mode)操作，第二个参数为使用的KEY
             cipher.init(Cipher.DECRYPT_MODE, key);
             //8.将加密并编码后的内容解码成字节数组
-            byte[] byteContent = new BASE64Decoder().decodeBuffer(content);
+            byte[] byteContent = Base64.getDecoder().decode(content);
             /*
              * 解密
              */
@@ -129,7 +127,7 @@ public class AESUtil {
 
     public static void main(String[] args) {
         String[] keys = {
-                "", "123456"
+                "MoFang@1234"
         };
         System.out.println("key | AESEncode | AESDecode");
         for (String key : keys) {
